# rust-price-checker

./: Cargo.toml
src/: main.rs
src/crawler/: client.rs  driver.rs  mod.rs  mod_tests.rs  options.rs
src/scrapper/: mod.rs
src/shared/: mod.rs
src/shared/errors/: validation.rs
src/shared/symbols/: mod.rs
src/shared/url/: mod.rs  mod_tests.rs
