[package]
name = "price_checker_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.19.3"
anyhow = "1.0.75"
scraper = "0.17.1"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.107"
